Actualizar colores del encabezado

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,10 @@
 nav{
-    background: #0b6a13;
+    background: #545554;
     height: 80px;
     width: 100%;
 }
 label.logo{
-    color: rgb(239, 255, 183);
+    color: #cdcecc;
     font-size: 35px;
     line-height: 80px;
     padding: 0 100px;
