--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #baf5af;
+    background-color: #ffffff;
     font-size: 16px;
 }
 
@@ -22,4 +22,20 @@ body {
     font-size: 15px;
     border: 1px solid #d3ffd3;
     margin: 10px;
+}
+
+/* INTRO */
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    margin-left: 5px;
+}
+.intro .title {
+    font-size: 40px;
+}
+.intro .desc {
+    font-size: 15px;
 }
