Actualizar footer, agregar unidades de medida e intro

--- a/styles/convertidor.css
+++ b/styles/convertidor.css
@@ -1,6 +1,6 @@
 /* CONVERTIDOR */
 .convertidor .convertidor-title {
-    color: #005f1d;
+    color: #000000;
     margin-top: 20px;
     margin-bottom: 15px;
     margin-left: 50px;
@@ -8,6 +8,7 @@
 /* CONVERTIDOR DE LONGITUD */
 .convertidor-longitud {
     display: flex;
+    flex-direction: column;
     width: 90%;
     align-items: center;
     justify-content: center;
@@ -18,15 +19,10 @@
 /* CONVERTIDOR DE MASA */
 .convertidor-masa {
     display: flex;
+    flex-direction: column;
     width: 90%;
     align-items: center;
     justify-content: center;
-}
-.convertidor .convertidor-title {
-    color: #005f1d;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    margin-left: 50px;
 }
 .convertidor-masa .displayResult {
     display: none;
@@ -34,16 +30,37 @@
 /* CONVERTIDOR DE TIEMPO */
 .convertidor-tiempo {
     display: flex;
+    flex-direction: column;
     width: 90%;
     align-items: center;
     justify-content: center;
 }
-.convertidor .convertidor-title {
-    color: #005f1d;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    margin-left: 50px;
-}
 .convertidor-tiempo .displayResult {
     display: none;
+}
+/* CONVERTIDOR DE TEMPERATURA */
+.convertidor-temperatura {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    align-items: center;
+    justify-content: center;
+}
+.convertidor-temperatura .displayResult {
+    display: none;
+}
+
+@media(max-width:550px) {
+    .convertidor-longitud {
+        width: 100%;
+    }
+    .convertidor-masa {
+        width: 100%;
+    }
+    .convertidor-tiempo {
+        width: 100%;
+    }
+    .convertidor-temperatura {
+        width: 100%;
+    }
 }
