--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,7 @@ body {
     background-color: #303030;
     color: #d3ffd3;
     font-size: 15px;
-    border: 1px solid #d3ffd3;
+    border: 1px solid #aab4aa;
     margin: 10px;
 }
 
